<resources>
    <string name="title_activity_login">登录</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="login">登录</string>
    <string name="input_password_number">请输入密码</string>
    <string name="input_old_password_number">请输入老密码</string>
    <string name="re_input_password">请再次输入密码</string>
    <string name="remember_password">记住密码</string>
    <string name="register">注册</string>
    <string name="select_gender">请选择性别</string>
    <string name="input_age_hint">请输入年龄</string>
    <string name="input_user_name_hint">请输入姓名</string>
    <string name="input_user_nick_name_hint">请输入昵称</string>
    <string name="profile">个人信息</string>
    <string name="admin">管理员</string>
    <string name="student">学生</string>
    <string name="immediately_sign_in">立即登录</string>
    <string name="sign_in_hint_des">登录后可查看动态</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="phone">手机号码</string>
    <string name="logout">退出登录</string>
    <string name="age_setting">设置年龄</string>
    <string name="dynamic_empty">暂无动态</string>
    <string name="head">头像</string>
    <string name="name">姓名</string>
    <string name="birthday">生日</string>
    <string name="select_address_hint">点击选择地址</string>
    <string name="nickname">昵称</string>
    <string name="take_photos">拍照</string>
    <string name="choice_from_phone">从相册选择</string>
    <string name="image_crop">裁剪</string>
    <string name="my_crop_image_error">图片裁剪失败</string>
    <string name="no_settle">未设置</string>
    <string name="select_birthday_hint">点击选择生日</string>
    <string name="modify_password">修改密码</string>
    <string name="checkout">提交</string>
    <string name="follow">关注</string>
    <string name="cancel_follow">取消关注</string>
    <string name="people_dynamic">Ta的动态</string>
    <string name="private_msg">私信</string>
    <string name="school">学校</string>

    <string-array name="gender_array">
        <item>男</item>
        <item>女</item>
    </string-array>
</resources>