<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".signin.SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_height="40dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/input_phone_number"
                app:counterEnabled="true"
                app:counterMaxLength="11"
                app:errorContentDescription="错误"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:text="手机号码" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/input_age_hint"
                app:counterMaxLength="2"
                app:errorContentDescription="错误"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_age">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ageEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    tools:text="年龄" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/genderContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/select_gender"
                app:errorContentDescription="错误"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_gender">

                <AutoCompleteTextView
                    android:id="@+id/genderTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="1"
                    tools:maxLength="2"
                    tools:text="性别" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/input_user_name_hint"
                app:errorContentDescription="错误"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_gender">

                <AutoCompleteTextView
                    android:id="@+id/userNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    tools:text="姓名" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nicknameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/input_user_nick_name_hint"
                app:errorContentDescription="错误"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_gender">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="8"
                    tools:text="昵称" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/schoolContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="请输入学校"
                app:errorContentDescription="错误"
                app:errorEnabled="true"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSchool"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="8"
                    tools:text="学校" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--地址-->
            <FrameLayout
                android:id="@+id/userAddressContainer"
                style="@style/user_profile_container"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/shape_outline">

                <TextView
                    android:id="@+id/addressText"
                    style="@style/user_profile_name"
                    android:text="@string/select_address_hint"
                    android:textColor="#999" />
            </FrameLayout>

            <!--生日-->
            <FrameLayout
                android:id="@+id/userBirthdayContainer"
                style="@style/user_profile_container"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/shape_outline">

                <TextView
                    android:id="@+id/birthdayText"
                    style="@style/user_profile_name"
                    android:text="@string/select_birthday_hint"
                    android:textColor="#999" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/input_password_number"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="8" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rePasswordContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/re_input_password"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rePasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="8" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/register"
        android:textSize="18sp"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>